doc/_static/my-styles.css
body {
    background: url(grid.png) repeat-x;
    background-attachment: fixed;
}

dl .attribute {
    margin-left: 50px;
}

dl .method {
    margin-left: 50px;
}

dl .classmethod {
    margin-left: 50px;
}

dl .staticmethod {
    margin-left: 50px;
}

dd > p {
    padding-left: 20px;
}

.property {
    font-weight: 100;
    padding-right: 2px;
}

dl > dt {
    background-color: #DDDDDD;
    border-radius: 5px;
    padding: 5px;
    color: #222222;
}

.admonition {
    background-color: #FFE3E3;
    border-color: #FFC4C4;
    color: #555555;
}

.admonition-for-more-information-please-read-our-paper {
    margin-bottom: 0px;
    padding-bottom: 0px;
}

.admonition-for-more-information-please-read-our-paper > table > tbody > tr > td{
    border-width: 0px
}

.table {
    margin-bottom: -10px
}

@media all and ( min-width: 680px ) {
    .div_style {
        width:630px;
        padding-bottom:472px !important;
    }
}

